--- a/notebooks/prepare_data.ipynb
+++ b/notebooks/prepare_data.ipynb
@@ -608,7 +608,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc2547c2910>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f130ff39a00>"
       ]
      },
      "execution_count": 5,
