--- a/notebooks/prepare_data.ipynb
+++ b/notebooks/prepare_data.ipynb
@@ -496,9 +496,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/tuyendv/Desktop/reranker\n"
+     ]
+    }
+   ],
    "source": [
     "%cd /home/tuyendv/Desktop/reranker/\n",
     "import os \n",
@@ -514,7 +522,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/home/tuyendv/Desktop/reranker/data/ir/test\"\n",
+    "path = \"/home/tuyendv/Desktop/reranker/data/ir/train\"\n",
     "data = load_data(path)\n",
     "data = [json.loads(line) for line in data]\n",
     "len(data)"
